feat(carddemo-application): translate CBACT04C interest calculation engine to CbAct04C
Translates app/cbl/CBACT04C.cbl (653 lines, 'Interest calculator') into
the Java application-layer class CbAct04C in
java/carddemo-application/src/main/java/com/blitzy/carddemo/application/account/.

Translates the COBOL batch program driven by app/jcl/INTCALC.jcl
(PARM='YYYYMMDDHH') that walks TCATBAL VSAM KSDS sequentially, detects
account boundaries, computes per-(account, type, category) monthly
interest, accumulates it per account, REWRITEs ACCT-CURR-BAL on each
account boundary (resetting ACCT-CURR-CYC-CREDIT/DEBIT to zero), and
appends one interest transaction record per non-zero-rate TCATBAL to
TRANSACT.

Per AAP §0.4.1, §0.6.8, §0.6.1, §0.6.6:

* Constructor injection of 5 ports per file schema: TransactionCategoryBalanceRepository,
  AccountRepository, CardXrefRepository, DiscountGroupRepository,
  TransactionRepository. Objects.requireNonNull on every argument.

* Public entry method run(LocalDate parmDate) returning int (APPL_AOK=0,
  APPL_ERROR=12, APPL_EOF=16) — caller (InterestCalculationApp.java)
  updated to use new contract.

* All 14 required public exports per file schema: PROGRAM_ID,
  MONTHLY_DIVISOR, DEFAULT_GROUP_ID, STATUS_OK/EOF/NOT_FOUND,
  TRAN_TYPE_INTEREST, TRAN_CAT_INTEREST, TRAN_SOURCE_SYSTEM,
  TRAN_DESC_PREFIX, APPL_AOK/EOF/ERROR.

* 1:1 paragraph-to-method mapping documented in class Javadoc:
    0000-TCATBALF-OPEN -> openTcatBal()
    0100-XREFFILE-OPEN -> openCardXref()
    0200-DISCGRP-OPEN  -> openDiscGrp()
    0300-ACCTFILE-OPEN -> openAcctFile()
    0400-TRANFILE-OPEN -> openTransact()
    1050-UPDATE-ACCOUNT -> updateAccount()
    1100-GET-ACCT-DATA  -> getAcctData()
    1110-GET-XREF-DATA  -> getXrefData()
    1200-GET-INTEREST-RATE + 1200-A-GET-DEFAULT-INT-RATE -> getInterestRate()
    1300-COMPUTE-INTEREST -> computeMonthlyInterest()
    1300-B-WRITE-TX     -> writeInterestTransaction()
    1400-COMPUTE-FEES   -> computeFees() (preserve